# parside

./: .gitignore  Cargo.toml  Makefile  README.md  codecov.yml
src/: lib.rs  lib_python.rs
src/error/: mod.rs
src/message/: cold_code.rs  custom_payload.rs  group.rs  message.rs  message_list.rs  mod.rs  parsers.rs
src/message/groups/: attached_material_quadlets.rs  controller_idx_sigs.rs  first_seen_replay_couples.rs  group.rs  mod.rs  non_trans_receipt_couples.rs  parsers.rs  pathed_material_quadlets.rs  sad_path_sig.rs  sad_path_sig_group.rs  seal_source_couples.rs  seql_source_couples.rs  trans_idx_sig_groups.rs  trans_last_idx_sig_groups.rs  trans_receipt_quadruples.rs  witness_idx_sigs.rs
src/utils/: mod.rs  nom.rs  parsers.rs
uniffi/: Cargo.toml  README.md  build.rs  uniffi.toml
uniffi/src/: lib.rs  parside.udl
uniffi/src/message/: custom.rs  matter.rs  message.rs  message_list.rs  mod.rs
uniffi/src/message/groups/: attached_material_quadlets.rs  controller_idx_sigs.rs  first_seen_replay_couples.rs  mod.rs  non_trans_receipt_couples.rs  pathed_material_quadlets.rs  sad_path_sig.rs  sad_path_sig_group.rs  seal_source_couples.rs  trans_idx_sig_groups.rs  trans_last_idx_sig_groups.rs  trans_receipt_quadruples.rs  witness_ids_sigs.rs
uniffi/src/message/primitives/: cigar.rs  dater.rs  diger.rs  mod.rs  prefixer.rs  saider.rs  seqner.rs  siger.rs  signer.rs  verfer.rs
wasm/: Cargo.toml  README.md
wasm/demo/node/: package.json
wasm/demo/node/src/: main.ts
wasm/demo/web/: index.html  index.js  package.json
wasm/src/: error.rs  lib.rs  utils.rs
wasm/src/message/: cold_code.rs  custom_payload.rs  message.rs  message_list.rs  mod.rs
wasm/src/message/groups/: attached_material_quadlets.rs  controller_idx_sigs.rs  first_seen_replay_couples.rs  mod.rs  non_trans_receipt_couples.rs  pathed_material_quadlets.rs  sad_path_sig.rs  sad_path_sig_group.rs  seal_source_couples.rs  trans_idx_sig_groups.rs  trans_last_idx_sig_groups.rs  trans_receipt_quadruples.rs  witness_idx_sigs.rs
