[package]
name = "parside"
version = "0.1.3"
edition = "2021"
description = "Parser for Composable Event Streaming Representation (CESR)"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cesride = { git = "https://github.com/DSRCorporation/cesride.git", branch = "changes-parside-and-avoid-mut-vectors" }
nom = "5"
num-derive = "0.3.3"
num-traits = "0.2"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_cbor = "0.11.1"
thiserror = "1.0"