[package]
name = "parside"
version = "0.1.3"
edition = "2021"
description = "Parser for Composable Event Streaming Representation (CESR)"
license = "Apache-2.0"

[dependencies]
cesride = { git = "https://github.com/DSRCorporation/cesride.git", branch = "fix/wasm-readme" }
nom = "~7.1"
num-derive = "~0.3"
num-traits = "~0.2"
rmp-serde = "~1"
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1", features = ["preserve_order"] }
serde_cbor = "~0.11"
thiserror = "~1"
anyhow = "~1"
