[package]
name = "parside-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies.parside]
path = '..'
package = "parside"

[dependencies]
cesride = { git = "https://github.com/DSRCorporation/cesride.git", branch = "changes-required-by-parser" }
uniffi = { version="0.23", features = [ "cli" ] }
uniffi_bindgen = "0.23.0"
uniffi_macros = "0.23"
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.23", features = [ "build", "cli" ] }
