[package]
name = "parside-wasm"
version = "0.1.0"
authors = ['Dmitry Kuzmenko <dmitry.kuzmenko@dsr-corporation.com>']
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
tmp_dev = []

[dev-dependencies.getrandom]
version = '0.2'
features = ['js']

[dependencies.parside_core]
path = '..'
package = "parside"

[dependencies.cesride_wasm]
git = "https://github.com/DSRCorporation/cesride.git"
branch = "wasm-parside"
package = "cesride-wasm"

[dependencies.cesride]
git = "https://github.com/DSRCorporation/cesride.git"
branch = "wasm-parside"

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = '0.3'
serde_json = "1.0"
